PayStack integration : Implemented a service to create Plan

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql: true
+
+#Paystack details
+applyforme.paystack.secret.key = sk_test_be5761495c667f7dec5823032c1548f552e9e0e9
